--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "@apollo/client": "^3.2.1",
+    "@apollo/client": "^3.2.2",
+    "apollo-link-context": "^1.0.20",
     "graphql": "^15.3.0",
+    "graphql-tag": "^2.11.0",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "9.5.3",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.26.11"
