--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@apollo/client": "^3.2.2",
     "apollo-link-context": "^1.0.20",
+    "cookie": "^0.4.1",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
     "isomorphic-unfetch": "^3.1.0",
+    "js-cookie": "^2.2.1",
     "next": "9.5.3",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
