--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,15 @@
     "@apollo/client": "^3.2.2",
     "apollo-link-context": "^1.0.20",
     "cookie": "^0.4.1",
+    "draft-js": "^0.11.7",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^2.2.1",
-    "next": "9.5.3",
+    "next": "^9.5.4",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-draft-wysiwyg": "^1.14.5"
   }
 }
