--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@apollo/client": "^3.2.2",
     "apollo-link-context": "^1.0.20",
     "cookie": "^0.4.1",
+    "date-fns": "^2.16.1",
     "draft-js": "^0.11.7",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
