--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,12 @@
     "cookie": "^0.4.1",
     "date-fns": "^2.16.1",
     "draft-js": "^0.11.7",
+    "draft-js-alignment-plugin": "^2.0.6",
+    "draft-js-drag-n-drop-plugin": "^2.0.4",
+    "draft-js-focus-plugin": "^3.0.1",
+    "draft-js-image-plugin": "^2.0.7",
+    "draft-js-plugins-editor": "^3.0.0",
+    "draft-js-resizeable-plugin": "^2.0.9",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
     "isomorphic-unfetch": "^3.1.0",
